# Hermes-P2P

./: .gitignore  README.md  index.html  key.txt  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: convert-svg.js  create-ico.js
src-tauri/src/: main.rs
